SERVER-19489 WorkingSet::clear() now clears the list of WorkingSetIDs that need to be examined on yield

Fixes an assertion failure that could be triggered by a rooted $or query.